<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="messages_classificacao"> %1$s</string>
    <string name="abaixo"><font color="#000000">Menor que 18.5:</font> <font color="#B71C1C">ABAIXO DO PESO</font></string>
    <string name="normal"><font color="#000000">Entre 18.5 e 24.9:</font> <font color="#BF360C">NORMAL</font></string>
    <string name="sobrepeso"><font color="#000000">Entre 25 e 29.9:</font> <font color="#DD2C00">SOBREPESO</font></string>
    <string name="obesidade"><font color="#000000">Entre 30 e 39.9:</font> <font color="#E65100">OBESIDADE</font></string>
    <string name="obesidadegrave"><font color="#000000">Maior que 40:</font> <font color="#FF3D00">OBESIDADE GRAVE</font></string>

</resources>
